Added variable for all of the buttons. Added code to save and pull from local storage

--- a/index.html
+++ b/index.html
@@ -40,48 +40,48 @@
     <div class="container">
       <div class="row">
         <div class="col-2 border border-left-0 border-dark">9am</div>
-        <input class="col-8 text-white" id="09"></input>
-        <button type="button" class="col-2 btn btn-primary rounded-right">Save</button>
+        <input class="col-8 text-white" id="09i"></input>
+        <button type="button" class="col-2 btn btn-primary rounded-right" id="09b">Save</button>
       </div>
       <div class="row">
         <div class="col-2 border border-left-0 border-dark">10am</div>
-        <input class="col-8 text-white" id="10"></input>
-        <button type="button" class="col-2 btn btn-primary rounded-right">Save</button>
+        <input class="col-8 text-white" id="10i"></input>
+        <button type="button" class="col-2 btn btn-primary rounded-right" id="10b">Save</button>
       </div>
       <div class="row">
         <div class="col-2 border border-left-0 border-dark">11am</div>
-        <input class="col-8 text-white" id="11"></input>
-        <button type="button" class="col-2 btn btn-primary rounded-right">Save</button>
+        <input class="col-8 text-white" id="11i"></input>
+        <button type="button" class="col-2 btn btn-primary rounded-right" id="11b">Save</button>
       </div>
       <div class="row">
         <div class="col-2 border border-left-0 border-dark">12pm</div>
-        <input class="col-8 text-white" id="12"></input>
-        <button type="button" class="col-2 btn btn-primary rounded-right">Save</button>
+        <input class="col-8 text-white" id="12i"></input>
+        <button type="button" class="col-2 btn btn-primary rounded-right" id="12b">Save</button>
       </div>
       <div class="row">
         <div class="col-2 border border-left-0 border-dark">1pm</div>
-        <input class="col-8 text-white" id="01"></input>
-        <button type="button" class="col-2 btn btn-primary rounded-right">Save</button>
+        <input class="col-8 text-white" id="01i"></input>
+        <button type="button" class="col-2 btn btn-primary rounded-right" id="01b">Save</button>
       </div>
       <div class="row">
         <div class="col-2 border border-left-0 border-dark">2pm</div>
-        <input class="col-8 text-white" id="02"></input>
-        <button type="button" class="col-2 btn btn-primary rounded-right">Save</button>
+        <input class="col-8 text-white" id="02i"></input>
+        <button type="button" class="col-2 btn btn-primary rounded-right" id="02b">Save</button>
       </div>
       <div class="row">
         <div class="col-2 border border-left-0 border-dark">3pm</div>
-        <input class="col-8 text-white" id="03"></input>
-        <button type="button" class="col-2 btn btn-primary rounded-right">Save</button>
+        <input class="col-8 text-white" id="03i"></input>
+        <button type="button" class="col-2 btn btn-primary rounded-right" id="03b">Save</button>
       </div>
       <div class="row">
         <div class="col-2 border border-left-0 border-dark">4pm</div>
-        <input class="col-8 text-white" id="04"></input>
-        <button type="button" class="col-2 btn btn-primary rounded-right">Save</button>
+        <input class="col-8 text-white" id="04i"></input>
+        <button type="button" class="col-2 btn btn-primary rounded-right" id="04b">Save</button>
       </div>
       <div class="row">
         <div class="col-2 border border-left-0 border-dark">5pm</div>
-        <input class="col-8 text-white" id="05"></input>
-        <button type="button" class="col-2 btn btn-primary rounded-right">Save</button>
+        <input class="col-8 text-white" id="05i"></input>
+        <button type="button" class="col-2 btn btn-primary rounded-right" id="05b">Save</button>
       </div>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
